# convey

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  ONBOARDING.md  README.md  docker-compose.yml  pyproject.toml  workflow.config.json
doc/analysis/: analysis-architecture-2026-07-18.md
doc/decisions/: 0001-multimedia-pipeline-pivot.md  0002-pgvector-rag.md  0003-external-media-api-guardrail.md  0004-product-alpha.md  0005-knowledge-graph-neo4j.md  0006-poc-scope-vector-video-terms.md  0007-auth-supabase.md  0008-data-sources.md  0009-broll-free-stock.md  0010-local-operator-dashboard.md  0011-dashboard-scenario-approval.md  0012-quality-graph-causality-llm-editor.md  0013-expansion-program.md  0014-open-llm-ner.md
doc/design/: README.md  backlog-deferred.md
doc/design/auth/: api-contract.py  task-auth-supabase-20260719.md
doc/design/content/: 20260722-task-dashboard-v2.md  20260723-task-polish.md  (+17 more)
doc/ref/: README.md  external-credentials.md  graph-kafka-guide.md  operations.md
doc/summary/: 20260720-summary-auth-supabase.md  20260720-summary-content-agent.md  20260720-summary-issue-detector.md  20260720-summary-media.md  20260720-summary-publishing.md  20260720-summary-research-r1.md  20260721-summary-alembic-baseline.md  20260721-summary-compose-alignment.md  20260721-summary-fact-retrieval.md  20260721-summary-local-tts.md  20260721-summary-macro-search.md  20260721-summary-pipeline-keyless.md  20260721-summary-research-issuedetector-streams.md  20260721-summary-research-marketfeed.md  20260721-summary-source-expansion.md  20260721-summary-tts-edge.md  20260722-summary-auto-pipeline.md  20260722-summary-broll-pexels.md  20260722-summary-broll-query-map.md  20260722-summary-compose-e2e.md  20260722-summary-content-dashboard-v2.md  20260722-summary-content-dashboard-workflow.md  20260722-summary-content-dashboard.md  20260722-summary-gateway-e2e.md  20260722-summary-history-dedup.md  20260722-summary-narration-length.md  20260722-summary-typed-nodes-index.md  20260722-summary-video-layout.md  20260723-summary-direction.md  20260723-summary-expansion-phaseD.md  20260723-summary-expansion-phaseE.md  20260723-summary-expansion-phaseF.md  20260723-summary-ner.md  20260723-summary-polish.md  20260723-summary-quality-phaseA.md  20260723-summary-quality-phaseB.md  20260723-summary-quality-phaseC.md  20260723-summary-tts-parallel.md  20260724-summary-milestone-phase1.md
gateway/: Dockerfile  pyproject.toml
gateway/app/: config.py  main.py
libs/common/: pyproject.toml
libs/common/common/: __init__.py  config.py  errors.py  gateway_auth.py  kafka.py  logging.py  security.py  stocks.py  supabase_auth.py
libs/common/tests/: test_supabase_auth.py
scripts/: backfill-graph.sh  down.sh  gen-stocks.py  generate.sh  get_youtube_refresh_token.py  reset-data.sh  restart.sh  status.sh  trigger_generate.py  up.sh
services/agent/: Dockerfile  pyproject.toml
services/agent/app/: config.py  llm_client.py  main.py
services/agent/app/agent/: loop.py  memory.py  state.py
services/agent/app/prompts/: system.py
services/agent/app/rag/: embeddings.py  retriever.py
services/agent/app/script/: builder.py
services/agent/app/tools/: __init__.py  base.py  calculator.py
services/agent/tests/: test_builder.py
services/auth/: Dockerfile  pyproject.toml
services/content/: Dockerfile  pyproject.toml
services/content/alembic/: env.py
services/content/alembic/versions/: .gitkeep  7598c32287dd_content_broll_meta.py  aa3ccec70626_baseline_content_generation_jobs_.py  c1d2e3f40011_generation_jobs_chart.py  d2e3f4a50012_generation_jobs_retry_count.py
services/content/app/: config.py  consumer.py  main.py  research_client.py
services/content/app/domains/content/: media.py  models.py  repository.py  router.py  schemas.py  service.py  ui_router.py
services/content/app/static/: index.html
services/issue-detector/: Dockerfile  pyproject.toml
services/issue-detector/app/: config.py  main.py  ranking.py  worker.py
services/issue-detector/tests/: test_ranking.py
services/llm-inference/: Dockerfile  pyproject.toml
services/llm-trainer/: Dockerfile  pyproject.toml
services/llm-trainer/app/: config.py  ollama_export.py  trainer.py  worker.py
services/market-feed/: Dockerfile  pyproject.toml
services/market-feed/app/: config.py  external_client.py  worker.py
services/news-feed/: Dockerfile  pyproject.toml
services/news-feed/app/: config.py  external_client.py  tagging.py  worker.py
services/news-feed/tests/: test_tagging.py
services/publishing/: Dockerfile  pyproject.toml
services/publishing/alembic/: env.py
services/publishing/alembic/versions/: ba3a7f7a1796_baseline_publishing_publish_records.py
services/publishing/app/: config.py  consumer.py  main.py  models.py  schemas.py  service.py  youtube.py
services/research/: Dockerfile  alembic.ini  pyproject.toml
services/research-feed/: Dockerfile  pyproject.toml
services/research-feed/app/: worker.py
services/research/alembic/: env.py
services/research/alembic/versions/: .gitkeep  2dea57e84dfe_macro_indicators.py  57e61ba69037_articles_tickers_gin_index.py  60c1465028e2_baseline_research_articles_price_ticks.py  bbba385fe7b9_article_tickers.py
services/research/app/: backfill.py  config.py  consumer.py  db.py  main.py
services/research/app/domains/research/: models.py  repository.py  router.py  schemas.py  service.py
services/research/app/extract/: relations.py
services/research/app/graph/: neo4j_repo.py
services/research/tests/: test_graph_repo.py  test_relations.py
services/sample-domain/: Dockerfile  pyproject.toml
services/sample-domain/alembic/: env.py
services/sample-domain/alembic/versions/: 0001_init.py
services/sample-domain/app/: config.py  main.py
services/sample-domain/app/domains/item/: models.py  repository.py  router.py  schemas.py  service.py
services/video-assembly/: Dockerfile  pyproject.toml
services/video-assembly/app/: assemble.py  broll.py  config.py  render.py  tts.py  worker.py
services/video-assembly/tests/: test_assemble.py  test_render.py
(+47 files in other folders)
