[project]
name = "gateway"
version = "0.1.0"
description = "FastAPI API 게이트웨이 (JWT 검증 + HMAC 신뢰헤더 + 프록시)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "common",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
