[project]
name = "agent-service"
version = "0.1.0"
description = "AI 에이전트 서비스 (오케스트레이션: prompts + tools + 근거회수 + 멀티턴 루프). LLM은 llm-inference에 위임."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",   # research/content /search east-west 호출(근거 회수)
    "common",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
