[project]
name = "content-service"
version = "0.1.0"
description = "콘텐츠 생성 잡·스크립트·미디어 자산·승인 상태 (FastAPI + SQLAlchemy + Kafka 소비/발행)."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pgvector>=0.3",  # 콘텐츠 히스토리 RAG (분리 인덱스)
    "httpx>=0.27",    # agent east-west 호출
    "common",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
