[project]
name = "issue-detector-service"
version = "0.1.0"
description = "이슈 종목 선별 — 시세·뉴스 스트림 집계 랭킹(워커) + 조회 API. 알파2."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "common",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
