[project]
name = "news-feed-service"
version = "0.1.0"
description = "뉴스·RSS 수집 + 종목·사건 태깅 워커 → Kafka 발행. HTTP 없음."
requires-python = ">=3.11"
dependencies = [
    "common",
    "httpx>=0.27",
    "feedparser>=6.0",  # RSS/Atom 파싱 (TODO(/builder): 실제 사용)
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
