[project]
name = "publishing-service"
version = "0.1.0"
description = "발행 — content.approved → YouTube 업로드(멱등·재시도) + 상태 조회. 알파4."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "common",
    # "google-api-python-client>=2",  # YouTube 업로드 — 토큰 배선 시 활성화
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
