[project]
name = "video-assembly-service"
version = "0.1.0"
description = "정확한 차트·수치 오버레이 렌더 + ffmpeg 합성 → 쇼츠 mp4. 알파③. HTTP 없음."
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.8",
    "edge-tts>=6.1",  # TTS(무료·키없음·한국어) — 로컬·서버 공통. torch 불요
    "httpx>=0.27",    # broll(Pexels) API 호출
    "common",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
